# fastwave

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: linters.yml  testing.yml
benchmark/: benchmark.py  benchmark_gil.ipynb
src/: _fastwave.cpp
src/fastwave/: __init__.py  impl.py
tests/: test_convert_data.py  test_info.py  test_read.py
