[project]
name = "fastwave"
version = "0.0.1"
description = "TBA"  # TODO
readme = "README.md"
requires-python = ">=3.9, <3.12"
authors = [
    { name = "Jan Iwaszkiewicz", email = "jiwaszkiewicz6@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numpy >= 1.24.4",
    # "nanobind >= 1.5.2",  # use submodule
    "wheel >= 0.36.0",
]

[project.optional-dependencies]
linters = [
    "black",
    "flake8",
    "flake8-pyproject",
]
tests = [
    "pytest",
    "numpy >= 1.24.4",
    "scipy",
]

[tool.pdm.scripts]
# TODO:
# python -m flake8 src/ tests/
# python -m black src/ tests/

[tool.pdm]
# plugins = [
#     ...
# ]

[build-system]
requires = ["scikit-build-core >= 0.4.3"] # , "nanobind >= 1.5.2"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"
# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"
# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"

[tool.flake8]
# Check that this is aligned with your other tools like Black
max-line-length = 120
exclude = [
    ".git",
    "__pycache__"
]
extend-ignore = [
    "F401"
]
